--- a/_posts/2016-11-20-Afrigning-2016.md
+++ b/_posts/2016-11-20-Afrigning-2016.md
@@ -1,6 +1,7 @@
 ---
 title: "Afrigning af Betty"
 author: mel
+excerpt: "En af de mindre sjove opgaver omkring Betty er årets afrigning. Det er aldrig det mest spændende arbejde"
 categories:
   - Skibsarbejde
 tags:
