Update with teaser images

--- a/_posts/2016-11-20-Afrigning-2016.md
+++ b/_posts/2016-11-20-Afrigning-2016.md
@@ -2,6 +2,8 @@
 title: "Afrigning af Betty"
 author: mel
 excerpt: "En af de mindre sjove opgaver omkring Betty er årets afrigning. Det er aldrig det mest spændende arbejde"
+header:
+	  teaser: "/assets/images/afrigning2016/7.jpg"
 categories:
   - Skibsarbejde
 tags:
@@ -60,9 +62,9 @@ Arbejdet gik dog hurtigt og i løbet af de tidlige morgentimer fik vi afrigget m
 	height="300px"
 	allowfullscreen
 	frameborder="0"
-	src="//storage.googleapis.com/vrview/index.html?image=//unisail.github.io/assets/images/afrigning2016/pano.jpg&is_stereo=false&&start_yaw=85">
+	src="//storage.googleapis.com/vrview/index.html?image=//unisail.github.io/assets/images/afrigning2016/pano.jpg&is_stereo=false&&start_yaw=110">
 </iframe>
-
+s
 Selvom man har oprigget skibe som Betty mange gange, er det alligevel altid svært at huske præcis hvordan tovværket skal sættes når det 
 igen bliver forår. Så for at undgå dette problem næste forår huskede vi at tage billeder af så mange ting som muligt. 
 
