--- a/_posts/2016-11-20-Afrigning-2016.md
+++ b/_posts/2016-11-20-Afrigning-2016.md
@@ -1,9 +1,9 @@
 ---
 title: "Afrigning af Betty"
 author: mel
-excerpt: "En af de mindre sjove opgaver omkring Betty er årets afrigning. Det er aldrig det mest spændende arbejde"
+excerpt: "En af de mindre sjove opgaver omkring Betty er årets afrigning. Det er aldrig det mest spændende arbejde, ..."
 header:
-	  image: "/assets/images/afrigning2016/7.jpg"
+    teaser: "/assets/images/afrigning2016/7.jpg"
 categories:
   - Skibsarbejde
 tags:
